<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"

    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:layout_weight="1"
        android:id="@+id/txt_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="45dp"
        android:layout_marginRight="5dp"
        android:text="@string/likeit"
        android:textColor="@color/color2"
        android:textSize="28dp"
       />





    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="-15dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="bottom"
        >

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/colorInvis"
            android:layout_marginRight="4dp"
            android:elevation="3dp"
            android:text="@string/no"
            android:textColor="@color/color2"
            android:textSize="16dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_no"
            android:layout_width="180dp"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="3dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@color/colorInvis"
            android:elevation="3dp"
            android:text="@string/giveRate"
            android:textColor="@color/color2"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_alignTop="@+id/btn_yes"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>