<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/status_bar_margin"
    android:background="@color/color2"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:theme="@style/ToolbarColoredBackArrow"
            android:background="@color/color2"
            app:title="@string/Settings"
            app:titleTextColor="@color/colorBlack"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/linearshape"
                android:elevation="4dp"
                android:orientation="vertical"
                >


                <LinearLayout
                    android:padding="3dp"
                    android:id="@+id/agelayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_effect"
                    android:orientation="vertical">


                    <TextView

                        android:id="@+id/zagolovokAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/age"
                        android:textColor="@color/colorText"
                        android:textSize="15dp"
                        android:textStyle="bold"

                        />

                    <Spinner
                        android:id="@+id/spinnerAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="7dp"

                        android:entries="@array/ages" />




            </LinearLayout>




                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color0"/>

                <LinearLayout
                    android:padding="3dp"
                    android:id="@+id/languagelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_effect"
                    android:orientation="vertical">


                    <TextView

                        android:id="@+id/zagolovokLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/Language"
                        android:textColor="@color/colorText"
                        android:textSize="15dp"
                        android:textStyle="bold"

                        />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="7dp"

                        android:entries="@array/languages" />


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/buttonContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_above="@+id/buttonPolicy"
            android:layout_alignParentStart="true"
            android:background="@color/colorInvis"
            android:text="@string/contact"
            android:textColor="@color/colorButtonNormal"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorInvis"
            android:text="@string/Privacy"
            android:textColor="@color/colorGrey"
            android:textSize="15dp"
            android:textStyle="bold" />


    </RelativeLayout>

</LinearLayout>